# Glia

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.hub  Dockerfile.web  LICENSE  README.md  RELEASE.md  SPEC.md  docker-compose.yml  package-lock.json  package.json  release-plz.toml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/web/: README.md  next.config.ts  package.json  vitest.config.ts
apps/web/src/: auth.ts  proxy.ts
apps/web/src/app/: global-error.tsx  layout.tsx  not-found.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/agents/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/catalog/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/logs/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/overview/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/secrets/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/settings/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/skills/: error.tsx  page.tsx
apps/web/src/app/(dashboard)/sync/: error.tsx  page.tsx
apps/web/src/app/api/events/: route.ts
apps/web/src/app/api/graphql/: route.ts
apps/web/src/app/login/: page.tsx
apps/web/src/components/: app-sidebar.tsx  connection-indicator.tsx  data-table.tsx  empty-state.tsx  error-state.test.tsx  error-state.tsx  log-socket-provider.tsx  log-viewer.tsx  query-provider.tsx  skeleton-table.tsx
apps/web/src/components/charts/: dynamic-charts.tsx
apps/web/src/hooks/: use-dashboard-events.ts  use-graphql.ts
apps/web/src/lib/: env.ts  graphql-client.ts  graphql-server.ts  query-client.ts  query-keys.test.ts  query-keys.ts
apps/web/src/lib/schemas/: settings.test.ts  settings.ts
apps/web/src/services/: event-bus.ts
apps/web/src/stores/: event-store.test.ts  event-store.ts  log-store.test.ts  log-store.ts  ui-store.test.ts  ui-store.ts
apps/web/src/test/: test-utils.tsx
apps/web/src/types/: next-auth.d.ts
apps/web/test/agent-browser/: .gitignore  README.md  package-lock.json  package.json  setup.ts  teardown.ts  tsconfig.json
apps/web/test/agent-browser/flows/: 01-login.ts  02-overview-kpis.ts  03-skills-toggle.ts  04-catalog-search.ts  05-secrets-add-provider.ts  06-settings-update.ts  07-sse-realtime.ts  08-logout-flow.ts  09-401-recovery.ts
apps/web/test/agent-browser/helpers/: assertions.ts  client.ts
crates/glia-action/: Cargo.toml
crates/glia-action/src/: lib.rs
crates/glia-auth/: Cargo.toml
crates/glia-auth/src/: lib.rs
crates/glia-author/: Cargo.toml
crates/glia-author/src/: lib.rs
crates/glia-bao/: Cargo.toml
crates/glia-bao/src/: lib.rs
crates/glia-bao/tests/: real_openbao.rs
crates/glia-bash/: Cargo.toml
crates/glia-bash/src/: lib.rs
crates/glia-bash/tests/: bash.rs
crates/glia-bridge/: Cargo.toml
crates/glia-bridge/src/: lib.rs
crates/glia-bridge/tests/: bridge.rs
crates/glia-cache/: Cargo.toml
crates/glia-cache/src/: lib.rs
crates/glia-cache/tests/: real_redis.rs
crates/glia-catalog/: Cargo.toml
crates/glia-catalog/src/: lib.rs
crates/glia-chunk/: Cargo.toml
crates/glia-chunk/src/: lib.rs
crates/glia-cli/: Cargo.toml
crates/glia-cli/src/: main.rs
crates/glia-cli/tests/: cli_parsing.rs  exit_code_2.rs  exit_codes.rs
crates/glia-context/: Cargo.toml
crates/glia-context/src/: lib.rs
crates/glia-db/: Cargo.toml
crates/glia-db/src/: lib.rs
crates/glia-db/tests/: db.rs
crates/glia-e2e/: Cargo.toml
crates/glia-e2e/tests/: bug_docs.rs  cross_cutting.rs  live_auth.rs  live_helix.rs  live_hub.rs  live_openbao.rs  live_redis.rs
crates/glia-e2e/tests/common/: mod.rs
crates/glia-embed/: Cargo.toml
crates/glia-embed/embed/: .gitignore  README.md
crates/glia-embed/src/: lib.rs
crates/glia-fs/: Cargo.toml
crates/glia-fs/src/: lib.rs
crates/glia-fs/tests/: fs.rs
crates/glia-helix/: Cargo.toml
crates/glia-helix/src/: lib.rs
crates/glia-helix/tests/: db.rs  real_helix.rs
crates/glia-hooks/: Cargo.toml
crates/glia-hooks/src/: lib.rs
crates/glia-hub/: Cargo.toml
crates/glia-hub-api/: Cargo.toml
crates/glia-hub-api/src/: auth.rs  events.rs  lib.rs  schema.rs  sse.rs  store.rs
crates/glia-hub/src/: config.rs  lib.rs  main.rs
crates/glia-hub/tests/: gateway.rs  gateway_protocol.rs  healthz.rs  oauth.rs
crates/glia-init/: Cargo.toml
crates/glia-init/src/: lib.rs
crates/glia-proto/: Cargo.toml
crates/glia-proto/src/: lib.rs
crates/glia-review/: Cargo.toml
crates/glia-review/src/: lib.rs
crates/glia-sandbox/: Cargo.toml
crates/glia-sandbox/src/: lib.rs
crates/glia-sandbox/tests/: real_openbao.rs  sandbox.rs
crates/glia-sync/: Cargo.toml
crates/glia-sync/src/: lib.rs
crates/glia-synth/: Cargo.toml
crates/glia-synth/src/: lib.rs
docs/: ARCHITECTURE.md  architecture.md  catalog.md  cli.md  development.md  hub.md  security.md
docs/plan/: v0.4.0.md
glia-test/: .env.example  README.md  compose.test.yml  setup.sh  teardown.sh
glia-test/crates/cli-flow/: Cargo.toml
glia-test/crates/cli-flow/src/: lib.rs
glia-test/crates/cli-flow/tests/: bridge_ws_round_trip.rs  chunk_ingest.rs  exit_codes.rs  save_skill.rs
glia-test/crates/hub-flow/: Cargo.toml
glia-test/crates/hub-flow/src/: lib.rs
glia-test/crates/hub-flow/tests/: catalog_install.rs  config_propagation.rs  login_journey.rs  secrets_oauth.rs
glia-test/tools/hashgen/: Cargo.toml
glia-test/tools/hashgen/src/: main.rs
