[package]
name = "glia-author"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AI self-authoring of skill markdown (T13: `glia_save_skill`, V11)"

[dependencies]
glia-db = { path = "../glia-db" }
glia-embed = { path = "../glia-embed" }
glia-cache = { path = "../glia-cache" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util", "fs"] }

[lints]
workspace = true
