[package]
name = "glia-bao"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenBao client + Predictive Pre-Auth + Redis OAuth token cache (T14, V3/V8/V17)"

[dependencies]
glia-cache = { path = "../glia-cache" }
glia-helix = { path = "../glia-helix" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "test-util"] }

[lints]
workspace = true
