[package]
name = "glia-bash"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sandboxed glia_bash via allow-list + path boundary (v1 cross-platform)"

[dependencies]
thiserror = "2"
tracing = "0.1"
regex = "1"
tokio = { version = "1", features = ["process", "io-util", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "rt-multi-thread"] }
tempfile = "3"

[lints]
workspace = true