[package]
name = "glia-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Redis caching layer for Glia (C5). InMemory for tests, Redis for production."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "test-util"] }

[lints]
workspace = true
