[package]
name = "glia-chunk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Skill chunking + ingestion pipeline for Glia — markdown split, embed, persist to SurrealDB"

[dependencies]
glia-helix = { path = "../glia-helix" }
glia-embed = { path = "../glia-embed" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
