[package]
name = "glia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glia CLI — cognitive control plane for AI agents"

[[bin]]
name = "glia"
path = "src/main.rs"

[dependencies]
glia-bridge = { path = "../glia-bridge" }
glia-helix = { path = "../glia-helix" }
glia-sync = { path = "../glia-sync" }
glia-hooks = { path = "../glia-hooks" }
glia-init = { path = "../glia-init" }
glia-review = { path = "../glia-review" }
glia-action = { path = "../glia-action" }
glia-author = { path = "../glia-author" }
glia-catalog = { path = "../glia-catalog" }
glia-embed = { path = "../glia-embed" }
glia-auth = { path = "../glia-auth" }
glia-chunk = { path = "../glia-chunk" }
glia-context = { path = "../glia-context" }
glia-synth = { path = "../glia-synth" }
glia-sandbox = { path = "../glia-sandbox" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true