[package]
name = "glia-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SurrealDB integration for Glia — embedded (CLI) + server (Hub), graph schema"

[dependencies]
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv", "protocol-ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tempfile = "3"

[lints]
workspace = true