[package]
name = "glia-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glia end-to-end live integration tests against real Docker services"

[dependencies]
glia-helix = { path = "../glia-helix" }
glia-hub = { path = "../glia-hub" }
glia-cache = { path = "../glia-cache" }
glia-bao = { path = "../glia-bao" }
glia-sandbox = { path = "../glia-sandbox" }
glia-auth = { path = "../glia-auth" }
glia-embed = { path = "../glia-embed" }
glia-bridge = { path = "../glia-bridge" }
glia-action = { path = "../glia-action" }
glia-chunk = { path = "../glia-chunk" }
glia-hooks = { path = "../glia-hooks" }
glia-bash = { path = "../glia-bash" }
glia-fs = { path = "../glia-fs" }
glia-context = { path = "../glia-context" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tempfile = "3"
chrono = "0.4"

[lints]
workspace = true