[package]
name = "glia-helix"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glia HelixDB wrapper — graph+vector store client + DSL queries"

[dependencies]
helix-db = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[lints]
workspace = true