[package]
name = "glia-hub-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glia Hub — GraphQL API layer (async-graphql + Axum)"

[dependencies]
async-graphql = { version = "7.2", default-features = false, features = ["chrono", "graphiql"] }
async-graphql-axum = "7.2"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
glia-bao = { path = "../glia-bao" }
glia-catalog = { path = "../glia-catalog" }

[lints]
workspace = true
