[package]
name = "glia-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Glia Hub — WebSocket gateway and control plane (Axum)"

[[bin]]
name = "glia-hub"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["net", "rt", "macros", "sync", "signal", "rt-multi-thread"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1"
tower = "0.5"
thiserror = "2"
anyhow = "1"
subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glia-action = { path = "../glia-action" }
glia-bao = { path = "../glia-bao" }
glia-helix = { path = "../glia-helix" }
glia-embed = { path = "../glia-embed" }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-tungstenite = { version = "0.26", features = ["connect"] }
tokio = { version = "1", features = ["net", "rt", "macros", "sync", "signal", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }

[lints]
workspace = true