[package]
name = "glia-init"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "`glia init` repo scan + stack detect + batch auth (T19, V8)"

[dependencies]
glia-helix = { path = "../glia-helix" }
glia-chunk = { path = "../glia-chunk" }
glia-hooks = { path = "../glia-hooks" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util", "fs"] }

[lints]
workspace = true