[package]
name = "glia-review"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Corrections → candidate-skills review queue (Phase 4 / D-Learning)"

[dependencies]
glia-helix = { path = "../glia-helix" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
