[package]
name = "glia-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local-remote SurrealDB bidirectional sync + disconnect fallback (T22, V15/V16)"

[dependencies]
glia-db = { path = "../glia-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util", "time"] }

[lints]
workspace = true